price list view

--- a/src/main/webapp/resources/htmlToLoad/admin.html
+++ b/src/main/webapp/resources/htmlToLoad/admin.html
@@ -26,19 +26,19 @@
             </a>
         </div>
         <ul class="nav">
-            <li class="active">
+            <li id="orderSection">
                 <a href="/order/all">
                     <i class="tim-icons icon-chart-bar-32"></i>
                     <p>Orders</p>
                 </a>
             </li>
-            <li>
+            <li id="priceListSection">
                 <a href="/priceList/all">
                     <i class="tim-icons icon-paper"></i>
                     <p>Price lists</p>
                 </a>
             </li>
-            <li>
+            <li id="componentSection">
                 <a href="/component/">
                     <i class="tim-icons icon-delivery-fast"></i>
                     <p>Warehouse</p>
