component section list

--- a/src/main/webapp/resources/htmlToLoad/admin.html
+++ b/src/main/webapp/resources/htmlToLoad/admin.html
@@ -41,7 +41,7 @@
             <li id="componentSection">
                 <a href="/component/">
                     <i class="tim-icons icon-delivery-fast"></i>
-                    <p>Warehouse</p>
+                    <p>Components</p>
                 </a>
             </li>
             <li>
