--- a/src/main/webapp/resources/htmlToLoad/admin.html
+++ b/src/main/webapp/resources/htmlToLoad/admin.html
@@ -115,7 +115,7 @@
                     <ul class="dropdown-menu dropdown-navbar">
                         <li class="nav-link"><a href="/profile/"
                                                 class="nav-item dropdown-item">Profile</a></li>
-                        <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Settings</a>
+                        <li class="nav-link"><a href="/main" class="nav-item dropdown-item">Online store</a>
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="nav-link"><a href="/logout" class="nav-item dropdown-item">Log
