--- a/src/main/webapp/resources/pagesToLoad/admin.html
+++ b/src/main/webapp/resources/pagesToLoad/admin.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../css/custom/custom.css"/>
 </head>
 <body>
-<div class="sidebar" id="sidebarAdmin" data-color="blue" data="green">
+<div class="sidebar" id="sidebarAdmin">
     <!--
       Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red"
   -->
@@ -46,7 +46,7 @@
             </li>
             <li>
                 <a href="/catalog/settings">
-                    <i class="tim-icons icon-bag-16"></i>
+                    <i class="tim-icons icon-puzzle-10"></i>
                     <p>Catalog settings</p>
                 </a>
             </li>
