file upload (work)

--- a/src/main/webapp/resources/pagesToLoad/admin.html
+++ b/src/main/webapp/resources/pagesToLoad/admin.html
@@ -44,7 +44,7 @@
                     <p>Components</p>
                 </a>
             </li>
-            <li>
+            <li id="catalogSection">
                 <a href="/catalog/settings">
                     <i class="tim-icons icon-puzzle-10"></i>
                     <p>Catalog settings</p>
