--- a/src/main/webapp/resources/pagesToLoad/login.html
+++ b/src/main/webapp/resources/pagesToLoad/login.html
@@ -18,6 +18,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent" id="navbarLogin">
     <div class="container-fluid">
+        <a class="navbar-brand" href="/main">STEKLO.BY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
