--- a/src/main/webapp/resources/pagesToLoad/admin.html
+++ b/src/main/webapp/resources/pagesToLoad/admin.html
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li id="catalogSection">
-                <a href="/catalog/settings?productType=mirror">
+                <a href="/catalog/settings/list?productType=mirror">
                     <i class="tim-icons icon-puzzle-10"></i>
                     <p>Catalog settings</p>
                 </a>
